<resources>
    <string name="app_name">tela_login</string>
    <string name="imagem_de_perfil">Imagem de perfil</string>
    <string name="gabriel_carlos">Gabriel Carlos</string>
    <string name="_0km">0Km</string>
    <string name="_999km">999Km</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="idade">Idade</string>
    <string name="email">Email</string>
    <string name="salvar">Salvar</string>
    <string name="exluir_conta">Exluir Conta</string>
</resources>
