<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="81dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/imagem_de_perfil"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/gabriel_carlos"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0km"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/seekBar3"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_999km"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:autofillHints="no"
                />

            <EditText
                android:id="@+id/editText2"
                android:autofillHints="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bio"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editText5"
                android:autofillHints="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/idade"
                android:inputType="number"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editText7"
                android:autofillHints="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <Button
                    style="@android:style/Animation"
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimary"
                    android:backgroundTint="#ffffff"
                    android:text="@string/salvar" />

                <Button
                    style="@android:style/Animation"
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:backgroundTint="#ffffff"
                    android:textColor="@color/secondaryDarkColor"
                    android:text="@string/exluir_conta" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
